<resources>
    <string name="app_name">TinkoffFintechAndroid</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="popular">Популярные</string>
    <string name="favorite">Избранное</string>
    <string name="star_content_desc">Added to favorite icon</string>
    <string name="movie_title">Изгой-один: Звёздные войны</string>
    <string name="movie_title_short">Изгой</string>
    <string name="movie_date">Фантастика (2016)</string>
    <string name="description">Сопротивление собирает отряд для выполнения особой миссии - надо выкрасть чертежи самого совершенного и мертоносного оружия Империи. Не всем суждено вернуться домой, но герои готовы к этому, ведь на кону судьба Галактики</string>
    <string name="genres">Жанры:\u0020</string>
    <string name="genres_list">фантастика, приключения</string>
    <string name="countries">Страны:\u0020</string>
    <string name="countries_list">США</string>
    <string name="movie_poster">Movie poster</string>
    <string name="no_internet_icon">No internet icon</string>
    <string name="error_text">Произошла ошибка при загрузке данных, проверьте подключение к сети</string>
    <string name="error_text_toast">Произошла ошибка при загрузке данных</string>
    <string name="retry_button">Повторить</string>
    <string name="search">Поиск</string>
    <string name="movie_shortcut_image">Movie shortcut image</string>
    <string name="empty_text">Пусто :(</string>
</resources>