<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/pb_details"
        android:layout_width="64dp"
        android:layout_height="64dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="gone" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_details_error"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"

        app:constraint_referenced_ids="iv_popular_error, tv_popular_error, btn_details_error" />

    <ImageView
        android:id="@+id/iv_popular_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/no_internet_icon"
        android:src="@drawable/baseline_cloud_off_100"

        app:layout_constraintBottom_toTopOf="@id/tv_popular_error"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/tv_popular_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="8dp"
        android:text="@string/error_text"
        android:textAlignment="center"
        android:textColor="?attr/colorAccent"
        app:layout_constrainedWidth="true"

        app:layout_constraintBottom_toTopOf="@id/btn_details_error"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_popular_error" />

    <Button
        android:id="@+id/btn_details_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/retry_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_popular_error" />

    <ScrollView
        android:id="@+id/sv_details"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            tools:context=".presentation.details.MovieDetailsFragment">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl_details_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="16dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl_details_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="16dp" />

            <ImageView
                android:id="@+id/iv_details"
                android:layout_width="0dp"
                android:layout_height="600dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/movie_poster"

                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/movie_image" />

            <TextView
                android:id="@+id/tv_details_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textAppearance="@style/TextAppearance.Material3.TitleLarge.Bold"
                app:layout_constrainedWidth="true"
                app:layout_constraintEnd_toStartOf="@+id/gl_details_2"

                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="@+id/gl_details_1"
                app:layout_constraintTop_toBottomOf="@+id/iv_details"
                tools:text="@string/movie_title" />

            <TextView
                android:id="@+id/tv_details_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constrainedWidth="true"
                app:layout_constraintEnd_toStartOf="@id/gl_details_2"

                app:layout_constraintStart_toStartOf="@id/gl_details_1"
                app:layout_constraintTop_toBottomOf="@id/tv_details_title"
                tools:text="@string/description" />

            <TextView
                android:id="@+id/tv_details_genres"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/genres"
                app:layout_constraintEnd_toStartOf="@id/gl_details_2"

                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="@id/gl_details_1"
                app:layout_constraintTop_toBottomOf="@id/tv_details_desc" />

            <TextView
                android:id="@+id/tv_details_genres_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constrainedWidth="true"
                app:layout_constraintEnd_toStartOf="@+id/gl_details_2"

                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toEndOf="@id/tv_details_genres"
                app:layout_constraintTop_toTopOf="@id/tv_details_genres"
                tools:text="@string/genres_list" />

            <TextView
                android:id="@+id/tv_details_countries"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:text="@string/countries"
                app:layout_constraintEnd_toStartOf="@id/gl_details_2"

                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="@id/gl_details_1"
                app:layout_constraintTop_toBottomOf="@+id/tv_details_genres_list" />

            <TextView
                android:id="@+id/tv_details_countries_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constrainedWidth="true"

                app:layout_constraintEnd_toStartOf="@+id/gl_details_2"

                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toEndOf="@id/tv_details_countries"
                app:layout_constraintTop_toTopOf="@id/tv_details_countries"
                tools:text="@string/countries_list" />



        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>