<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="16dp"
    app:cardElevation="8dp"
    android:layout_marginBottom="16dp"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="15dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/siv_shortcut"
            android:layout_width="wrap_content"
            android:layout_height="63dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"

            tools:src="@drawable/shortcut"
            app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Small"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tv_shortcut_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constrainedWidth="true"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="42dp"
            app:layout_constraintHorizontal_bias="0"

            android:layout_marginBottom="0dp"


            android:text="@string/movie_title"
            android:lines="1"
            android:ellipsize="end"
            android:textAppearance="@style/TextAppearance.Material3.TitleLarge.Bold"

            app:layout_constraintBottom_toTopOf="@id/tv_shortcut_date"
            app:layout_constraintStart_toEndOf="@+id/siv_shortcut"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/iv_shortcut_star"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/tv_shortcut_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginStart="15dp"
            android:text="@string/movie_date"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/siv_shortcut"
            app:layout_constraintTop_toBottomOf="@+id/tv_shortcut_title" />


        <ImageView
            android:id="@+id/iv_shortcut_star"
            android:layout_width="16dp"
            android:layout_height="15dp"

            android:src="@drawable/star"

            app:layout_constraintBottom_toBottomOf="@+id/tv_shortcut_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_shortcut_title"
            android:contentDescription="@string/star_content_desc" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>